# HH-vacancy-parser

./: .coverage  .flake8  .gitignore  README.md  main.py  pyproject.toml  pytest.ini  vacancies_export.csv
src/: __init__.py  hh.py  parser.py  utils.py  vacancy.py  vacancy_saver.py  view.py
tests/: test_hh.py  test_parser.py  test_utils.py  test_vacancy.py  test_vacancy_saver.py  test_view.py
