[tool.poetry]
name = "hh-vacancy-parser"
version = "0.1.0"
description = "Интеграция с hh.ru для поиска и фильтрации вакансий"
authors = ["Galina Mordovina <glukoloid@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
