[tool.poetry]
name = "hh-vacancy-parser"
version = "0.1.0"
description = "Интеграция с hh.ru для поиска и фильтрации вакансий"
authors = ["Galina Mordovina <glukoloid@gmail.com>"]
readme = "README.md"
package-mode = false
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.4"
poetry-core = "^2.1.3"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
